# mjventoy-rs

./: Cargo.toml  PRD.md
src/: auth.rs  discovery.rs  executor.rs  main.rs  theme.rs
src/tui/: app.rs  input.rs  mod.rs  ui.rs
