[package]
name = "mjventoy-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
indicatif = "0.18.3"
libc = "0.2.180"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
